	PR 10670 	* options.h (class General_options): Add -x/--discard-all. 	* object.cc (Sized_relobj::do_count_local_symbols): Handle 	--discard-all.  If the local symbol needs a dynamic entry, check 	that before handling --discard-locals.